--- a/views/Partial/footerAdmin.hbs
+++ b/views/Partial/footerAdmin.hbs
@@ -1,7 +1,7 @@
 <button id="back-to-top">
     <i class="fas fa-arrow-alt-circle-up" ></i>
 </button>
-<footer class="tm-footer row tm-mt-small">
+<footer class="tm-footer row tm-mt-small footer-area">
 <div class="col-12 font-weight-light">
     <p class="text-center text-white mb-0 px-4 small">
     Copyright &copy; <b>2018</b> All rights reserved. 
