--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -59,12 +59,10 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="/about"> About</a>
-            </li>
+          
             <li class="nav-item dropdown dropbtn">
               <a class="nav-link" href="/product/1">Products</a>
               <div class="dropdown-content">
@@ -73,6 +71,9 @@
                 <a href="./product">Tablet</a>
                 <a href="./product">Accessories</a>
               </div>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" href="/about"> About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/why">Why Us</a>
