--- a/views/User/home.hbs
+++ b/views/User/home.hbs
@@ -119,15 +119,7 @@
 
   <section class="product_section layout_padding">
     <div class="container">
-      <div class="filtering">
-            
-        <input type="text" placeholder="Search Your Item Here" id="quick-search"> 
-        <div class="button-space">
-          <button class="btn btn-primary text-uppercase filter-choice a-z active">A-Z</button>
-          <button class="btn btn-primary text-uppercase filter-choice p-asc">Price Ascending</button>
-          <button class="btn btn-primary text-uppercase filter-choice p-desc">Price Descending</button>
-        </div>
-        </div>
+      
       <div class="heading_container heading_center">
         <h2>
           Our Products
@@ -474,71 +466,7 @@
   
   {{> script}}
 
-  <script>
-    //search
-    $(function() {
-      $('#quick-search').on('keyup', function() {
-        const search_item = $(this).val().toLocaleLowerCase();
-        
-        $('.box').filter(function() {
-          $(this).parent().toggle($(this).children('.detail-box').children('h5.product-name').text().toLocaleLowerCase().indexOf(search_item) > -1);
-        })
-      })
-    })
-
-
-    //sort a-z
-    $(function() {
-      $('.a-z').on('click', function() {
-        $(this).addClass('active')
-        $('.p-desc').removeClass('active')
-        $('.p-asc').removeClass('active')
-        let list = $('ul.items');
-        let alphabet = $('li.col-sm-6');
-        alphabet.sort(function(first, second) {
-          return $(first).text().toLowerCase().localeCompare($(second).text().toLowerCase());
-        })
-        $.each(alphabet, function(index, item) {
-          list.append(item)
-        })
-      })
-    })
-
-    //price asc
-    $(function() {
-      $('.p-asc').on('click', function() {
-        $(this).addClass('active')
-        $('.a-z').removeClass('active')
-        $('.p-desc').removeClass('active')
-        let list = $('ul.items');
-        let price = $('li.col-sm-6');
-        price.sort(function(first, second) {
-          return $(first).children().children().children().children('h5').text().replace('$', '').localeCompare($(second).children().children().children().children('h5').text().replace('$', ''));
-        })
-        $.each(price, function(index, item) {
-          list.append(item)
-        })
-      })
-    })
-
-
-    //price desc
-    $(function() {
-      $('.p-desc').on('click', function() {
-        $(this).addClass('active')
-        $('.a-z').removeClass('active')
-        $('.p-asc').removeClass('active')
-        let list = $('ul.items');
-        let price = $('li.col-sm-6');
-        price.sort(function(second, first) {
-          return $(first).children().children().children().children('h5').text().replace('$', '').localeCompare($(second).children().children().children().children('h5').text().replace('$', ''));
-        })
-        $.each(price, function(index, item) {
-          list.append(item)
-        })
-      })
-    })
-  </script>
+  {{> forFilter}}
 </body>
 
 </html>
