--- a/views/User/productDetail.hbs
+++ b/views/User/productDetail.hbs
@@ -183,7 +183,7 @@
                                             <li class="list-inline-item"><span class="btn"
                                                     id="btn-minus">-</span></li>
                                             <li class="list-inline-item"><span class="badge"
-                                                    id="var-value">1</span></li>
+                                                    id="quantity"> 1 </span></li>
                                             <li class="list-inline-item"><span class="btn"
                                                     id="btn-plus">+</span></li>
                                         </ul>
@@ -545,6 +545,30 @@
     <!-- Start Footer -->
     {{> footer}}
     {{> script}}
+    <script>
+    $('.fa-shopping-cart').parent().addClass('active');
+    //increase quantity
+    $(function () {
+      $('#btn-plus').on('click', function () {
+          let quantity = parseInt($('#quantity').text());
+          quantity++;
+          $('#quantity').text(quantity)
+          
+      })
+    })
+    //decrease quantity
+    $(function () {
+      $('#btn-minus').on('click', function () {
+          let quantity = parseInt($('#quantity').text());
+          quantity--;
+          if(quantity < 1){
+              quantity = 1;
+          }
+          $('#quantity').text(quantity)
+          
+      })
+    })
+    </script>
 </body>
 
 </html>
