--- a/views/User/product.hbs
+++ b/views/User/product.hbs
@@ -35,7 +35,7 @@
         <div class="col-sm-6 col-lg-4">
           <div class="box">
             <div class="img-box">
-              <img src={{prod_img}} alt="" name={{prod_img}}>
+              <img src={{prod_img}} alt="" name={{product_name}}>
               <a href="detail/{{id}}" class="add_cart_btn">
                 <span>
                   Add To Cart
