--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -27,12 +27,13 @@
         <div class="user_option_box">
           <a href="/login" class="account-link">
             <i class="fa fa-user" aria-hidden="true"></i>
-            {{#if user}}
-            <span>Hello {{user.lastName}} {{user.firstName}}!</span><a href="/logout">Logout</a>
+            {{#if email}}
+            <a href="/profile"><span>Hello {{email}}!</span></a> <a href="/logout">Logout</a>
             {{else}}
-            <a href="/login">Login</a>
+            <a href="/login"><i class="fa fa-user"></i> Login</a>
             {{/if}}
           </a>
+          
           <a href="cart" class="nav-link">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
             <span>
