--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -26,9 +26,8 @@
         
         <div class="user_option_box">
           <a href="/login" class="account-link">
-            <i class="fa fa-user" aria-hidden="true"></i>
-            {{#if email}}
-            <a href="/profile"><span>Hello {{email}}!</span></a> <a href="/logout">Logout</a>
+            {{#if user}}
+            <a href="/profile"><span>Hello {{user.user_email}}!</span></a> <a href="/logout">Logout</a>
             {{else}}
             <a href="/login"><i class="fa fa-user"></i> Login</a>
             {{/if}}
