--- a/views/Partial/header.hbs
+++ b/views/Partial/header.hbs
@@ -33,7 +33,7 @@
             {{/if}}
           </a>
           
-          <a href="cart" class="nav-link">
+          <a href="/cart" class="nav-link">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
             <span>
               Cart
