--- a/views/User/cart.hbs
+++ b/views/User/cart.hbs
@@ -11,7 +11,7 @@
 
 <body>
     <div class="cart">
-    {{> header}}
+        {{> header}}
 
         <div class="row py-5 px-5">
             <div class="col-8 px-2">
@@ -21,32 +21,9 @@
                 </div>
                 <div class="row container-fluid custom_nav-container px-3 py-3">
                     <ul class="list-group" style="width: 100%;">
-                        <li class="list-group-item">
-                            <div class="row d-flex align-items-center">
-                                <div class="col-1">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1"
-                                            value="option1">
-                                    </div>
-                                </div>
-                                <div class="col-2">
-                                    <img src="img/p1.png" height="64px" />
-                                </div>
-                                <div class="col-4">
-                                    <a class="description" href="product">Description</a>
-                                </div>
-                                <div class="col-3">
-                                    <div style="display: inline-flex;">
-                                        <button class="btn">-</button>
-                                        <input min="1" size="1" maxlength="2">
-                                        <button class="btn">+</button>
-                                    </div>
-                                </div>
-                                <div class="col-2">
-                                    Price
-                                </div>
-                            </div>
-                        </li>
+                        
+                        
+                        
                     </ul>
                 </div>
             </div>
@@ -65,11 +42,11 @@
                             <p class="float-right" style="color: #f2b01e;">price</p>
                         </div>
                     </div>
-                    <div class="btn light" style="font-size: x-large;">Thanh toán</div>
+                    <div method="post" href="." class="btn light" type="submit" style="font-size: x-large;">Thanh toán</div>
                 </div>
             </div>
         </div>
-    {{> footer}}
+        {{> footer}}
     </div>
     {{> script}}
     <script>
@@ -78,6 +55,58 @@
         const cart_height = $('.cart').height();
         document.querySelector('.info_section').style.top = `${header_height + cart_height}px`;
     </script>
+
+    <script>
+        $('.btn-desc').on('click', function() {
+            if ($('.quantity-area').val() > 0)
+                $('.quantity-area').val($('.quantity-area').val() - 1);
+        })
+
+        $('.btn-inc').on('click', function() {
+            
+            $('.quantity-area').val(+$('.quantity-area').val() + 1);
+        })
+    </script>
+
+    <script>
+        const items = {...localStorage}
+        listItems = ``
+        for (key in items) {
+            quantity = items[key].split(' ')[0]
+            img = items[key].split(' ')[1]
+            listItems += 
+            `
+                <li class="list-group-item" id=${key}>                            
+                    <div class="row d-flex align-items-center">
+                        <div class="col-1">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="inlineCheckbox1"
+                                    value="option1">
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <img src=${img} height="64px" />
+                        </div>
+                        <div class="col-4">
+                            <a class="description" href="/product/detail/{{id}}">Description</a>
+                        </div>
+                        <div class="col-3">
+                            <div style="display: inline-flex;">
+                                <button class="btn btn-desc">-</button>
+                                <input class="quantity-area"  style="text-align:center" min="1" size="1" maxlength="100", step="1" value=${quantity}>
+                                <button class="btn btn-inc">+</button>
+                            </div>
+                        </div>
+                        <div class="col-2 price-column" value="{{price}}">
+                            {{price}}
+                        </div>
+                    </div>
+                </li>
+            `
+        }
+        document.querySelector('.list-group').innerHTML = listItems
+    </script>
+    {{> updateCart}}
 </body>
 
 </html>
