--- a/views/Partial/script.hbs
+++ b/views/Partial/script.hbs
@@ -3,4 +3,4 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-<script src="js/jquery.dataTables.min.js" type="text/javascript"></script>
+{{!-- <script src="js/jquery.dataTables.min.js" type="text/javascript"></script> --}}
