--- a/views/User/product.hbs
+++ b/views/User/product.hbs
@@ -52,7 +52,7 @@
                 {{product_name}}
               </h5>
               <div class="product_info">
-                <h5 name={{prod_price}} class="price">
+                <h5 id="price_{{id}}" value={{price}} name={{prod_price}} >
                   <span>$</span> {{price}}
                 </h5>
                 <div class="star_container">
@@ -129,20 +129,22 @@
     //add the cart
     $('.add_cart_btn').on('click', function() {
       let key = $(this).val()
-      let value = $(`#${key}`).attr('src');
+      let img = $(`#${key}`).attr('src');
+      let price = $(`#price_${key}`).attr('value')
+      
       if (!localStorage.getItem(key)) {
-        localStorage.setItem(key, '1 ' + value)
+        localStorage.setItem(key, '1 ' + img + ' ' + price);
       }
       else {
-        localStorage.setItem(key, +localStorage.getItem(key).split(' ')[0] + 1 + ' ' + value)
+        localStorage.setItem(key, +localStorage.getItem(key).split(' ')[0] + 1 + ' ' + img + ' ' + price)
         
       }
       const cart = { ...localStorage };
-      let total = 0;
+      let total_items = 0;
       for (item in cart) {
-        total += +cart[item].split(' ')[0]
+        total_items += +cart[item].split(' ')[0]
       }
-      document.querySelector('.fa-shopping-cart').textContent = `\t` + total;
+      document.querySelector('.fa-shopping-cart').textContent = `\t` + total_items;
     })
   </script>
   {{> updateCart}}
