--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,7 +148,7 @@ a:focus {
 
 .header_section {
   background-color: black;
-  position: fixed;
+  position: relative;
   top: 0;
   width: 100%;
   z-index: 4;
