--- a/views/User/home.hbs
+++ b/views/User/home.hbs
@@ -131,11 +131,11 @@
           <div class="box">
             <div class="img-box">
               <img src="img/p1.png" alt="">
-              <a href="" class="add_cart_btn">
+              <button value="{{id}}" class="add_cart_btn">
                 <span>
                   Add To Cart
                 </span>
-              </a>
+              </button>
               <a href="product/detail/{{id}}" class="detail_btn">
                 <span>
                   Detail
@@ -394,11 +394,10 @@
     </div>
   </section>
   <!-- end client section -->
-
   {{> footer}}
   
   {{> script}}
-
+  {{> addToCart}}
   {{> forFilter}}
 </body>
 
