--- a/views/User/userProfile.hbs
+++ b/views/User/userProfile.hbs
@@ -78,6 +78,27 @@
                         </div>
                     </div>
                 </form>
+                <form class="form-horizontal" role="form" method="post" action="profile/password">
+                     <div class="form-group">
+                        <label class="col-lg-3 control-label">Current password:</label>
+                        <div class="col-lg-8">
+                            <input id = class="form-control" type="password" name="currPassword" value="">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-3 control-label">New password:</label>
+                        <div class="col-lg-8">
+                            <input class="form-control" type="password" name="newPassword" value="">
+                        </div>
+                    </div>
+                    <div class="row gutters">
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div class="text-left">
+                                <button class="btn btn-primary">Update password</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
