--- a/views/Partial/headerAdmin.hbs
+++ b/views/Partial/headerAdmin.hbs
@@ -92,7 +92,7 @@
     <ul class="navbar-nav">
         <li class="nav-item">
         <a class="nav-link d-block" href="/Admin/">
-            Admin, <b>Logout</b>
+            {{user.user_Name}} <b>Logout</b>
         </a>
         </li>
     </ul>
