--- a/views/User/login.hbs
+++ b/views/User/login.hbs
@@ -63,9 +63,15 @@
                   <button class="mt-5 btn btn-primary btn-block text-uppercase">
                     Forgot your password?
                   </button>
-                  
+                  <butto<div class="form-group mt-4">
+                    <button
+                      type="submit"
+                      class="btn btn-primary btn-block text-uppercase"
+                    >
+                      Register
+                    </button>
+                  </div>
                 </form>
-  
               </div>
               <button type="button" onclick="window.location.href='/google'" class="mt-5 btn btn-primary btn-block text-uppercase">
                 <i class="fab fa-google-plus-g"></i> Sign in with Google+
